--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "qs": "^6.7.0",
     "swiper": "^4.5.0",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
