--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "swiper": "^4.5.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
