--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.15.2",
     "fastclick": "^1.0.6",
     "qs": "^6.7.0",
     "swiper": "^4.5.0",
