--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "build:node": "webpack --config ./build/webpack.server.conf",
+    "build:client": "webpack --config ./build/webpack.client.conf"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "better-scroll": "^1.15.2",
     "fastclick": "^1.0.6",
+    "progress-bar-webpack-plugin": "^1.12.1",
     "qs": "^6.7.0",
     "swiper": "^4.5.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "webpack-build-notifier": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -83,6 +87,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dashboard": "^3.0.7",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
