--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0",
-    "webpack-build-notifier": "^1.1.0"
+    "webpack-build-notifier": "^1.1.0",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-dev-server": "^2.11.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
